[package]
name = "rust_vwap"
version = "1.0.0"
edition = "2021"
description = "Rayon-parallel VWAP Momentum backtester for PPOAlgo (i9-13900K / 32 threads)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
target-cpu = "native"
